[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/Portal/PortalEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Objects/portal2.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Portal/PortalPair.gd" type="Script" id=3]

[node name="PortalPair" type="Node2D"]
script = ExtResource( 3 )

[node name="Portal" parent="." instance=ExtResource( 1 )]

[node name="Portal2" parent="." instance=ExtResource( 1 )]
position = Vector2( 18, 0 )

[node name="Sprite" parent="Portal2" index="0"]
texture = ExtResource( 2 )
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
[connection signal="body_exited" from="Portal" to="." method="_on_Portal_body_exited"]
[connection signal="body_entered" from="Portal2" to="." method="_on_Portal2_body_entered"]
[connection signal="body_exited" from="Portal2" to="." method="_on_Portal2_body_exited"]

[editable path="Portal"]

[editable path="Portal2"]
